d3ui3 spacing issue
https://github.com/filesender/filesender/issues/2204

--- a/www/css/new-ui/components/_table.css
+++ b/www/css/new-ui/components/_table.css
@@ -51,6 +51,12 @@
   padding: 0;
 }
 
+
+table.files .downloadprogress {
+    margin-left: 1em;
+}
+
+
 /* XS,SM,MD */
 @media (max-width: 991px) {
   .fs-table {
